<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="?attr/bgc"
    >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/bgc">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="?attr/bgc"
            android:textColor="?attr/tC"
            android:fontFamily="@font/boldsp"
            android:text="@string/regvalue"

            android:textSize="42sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/bgc"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:fontFamily="@font/boldsp"
            android:text="@string/prosba"
            android:textColor="#A5A5A5"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:textAlignment="center"

            android:clickable="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/boldsp"
            android:text="@string/acc"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/red"
            android:ems="10"
            android:fontFamily="@font/boldsp"
            android:hint="@string/FIO"
            android:textColorHint="?attr/hint_color"
            android:paddingLeft="5dp"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:backgroundTint="@color/red"
            android:ems="10"
            android:textColorHint="?attr/hint_color"
            android:maxLines="1"
            android:singleLine="true"
            android:fontFamily="@font/boldsp"
            android:hint="@string/telNumber"
            android:inputType="phone"
            android:textColor="@color/green"
            android:textSize="24sp"
            />

        <EditText
            android:id="@+id/enterTelephone"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:paddingLeft="5dp"
            android:textColor="@color/green"
            android:completionThreshold="1"
            android:hint="@string/cod"
            android:textColorHint="?attr/hint_color"
            android:fontFamily="@font/boldsp"
            android:textSize="24sp"
            android:clickable="false"

            />

        <AutoCompleteTextView
            android:id="@+id/autocomplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/boldsp"
            android:textColor="@color/green"
            android:paddingLeft="5dp"
            android:textSize="24sp"
            android:hint="@string/chose_region"
            android:maxLines="1"
            android:textColorHint="?attr/hint_color"
            android:singleLine="true"
            android:completionThreshold="3"
            />
        <CheckBox
            android:id="@+id/checkbox"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sostou"
            android:fontFamily="@font/boldsp"
            android:textSize="24sp"
            android:textColor="?attr/hint_color"
            android:onClick="onClick"
            />
        <EditText
            android:id="@+id/inv"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:paddingLeft="5dp"
            android:textColor="@color/green"
            android:completionThreshold="1"
            android:hint="@string/dolzn"
            android:textColorHint="?attr/hint_color"
            android:fontFamily="@font/boldsp"
            android:textSize="24sp"
            android:clickable="false"

    />
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/boldsp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/signin"
            android:onClick="onClick"
            android:textSize="18sp" />





    </TableLayout>



    </ScrollView>
</RelativeLayout>