<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgc"
    tools:context=".SignIn">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="?attr/bgc"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="?attr/bgc"
            android:textColor="?attr/tC"
            android:fontFamily="@font/boldsp"
            android:text="@string/signa"
            android:textSize="42sp"
            android:textStyle="bold"
            />
        <TableRow
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/bgc"
            >
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/bgc"
                android:textAlignment="center"
                android:fontFamily="@font/boldsp"
                android:text="@string/noacc"
                android:textColor="?attr/hint_color"

                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/bgc"
                android:onClick="onClickCreate"
                android:clickable="true"
                android:textAlignment="center"
                android:fontFamily="@font/boldsp"
                android:text="@string/crate"
                android:textColor="@color/green"
                android:textSize="20sp" />
        </TableRow>
        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="40dp"
            android:backgroundTint="@color/red"
            android:ems="10"
            android:fontFamily="@font/boldsp"
            android:hint="@string/email"
            android:textColorHint="?attr/hint_color"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textColor="@color/green"
            android:textSize="24sp" />



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:backgroundTint="@color/red"
            android:ems="10"
            android:textColorHint="?attr/hint_color"

            android:fontFamily="@font/boldsp"
            android:hint="@string/pass"

            android:inputType="textPassword"
            android:textColor="@color/green"
            android:textSize="24sp" />




        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/boldsp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/enter"
            android:onClick="onClick"
            android:textSize="18sp" />



    </TableLayout>
</RelativeLayout>